2002-12-02  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (MakeDeprecationNote): Support multi-paragraph 
	deprecation notes.

2002-11-29  James Henstridge  <james@daa.com.au>

	* gtkdoc-mkhtml.in: copy the navigation images for both XML and
	SGML cases.

	* gtk-doc.dsl.in: update DSSSL stylesheets to match layout of XSL
	ones.

2002-11-29  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scan.in (ScanHeader): Make deprecation guards work with
	both 
	#ifndef DEPRECATION_GUARD  
	#if !defined(DEPRECATION_GUARD) || defined(FOO_COMPILATION)
	The second form is used in GDK and GTK+ to include selected
	deprecated symbols when compiling the library itself.

2002-11-27  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in: Parse to new tags in inline doc comments,
	Since: and Deprecated:, which can be placed after the Returns:
	tag. Emit the Since: information (which is expected to be just a
	version number) after the parameters and the Deprecated:
	information (which is expected to be one or more full sentences)
	inside the deprecation warning. 
	Warn if a Deprecated: tag is found on a symbol which is not
	guarded by a deprecation guard in the header.

2002-11-26  James Henstridge  <james@daa.com.au>

	* gtkdoc-mkhtml.in: set gtkdoc-bookname and gtkdoc-version
	parameters in sgml mode, and don't bother with the sed run after
	processing with jade.
	In XML mode, pass the version number in as a parameter too.

	* gtk-doc.dsl.in ($user-html-header$): add <meta> tag if
	gtkdoc-version is set.
	(generate-index-mode): if gtkdoc-bookname is set, add it to the
	hrefs in the index file, like the XSLT sheets do.

	* gtk-doc.xsl: add gtkdoc.version parameter, and use it to add a
	<meta> tag with the gtk-doc version number.

2002-11-16  Damon Chaplin  <damon@gnome.org>

	* Released 0.10.

2002-11-16  Damon Chaplin  <damon@gnome.org>

	* configure.in: bumped version to 0.10.

	* Makefile.am (EXTRA_DIST): added MAINTAINERS.
